--- a/rawniis-weird-webs-2025.html
+++ b/rawniis-weird-webs-2025.html
@@ -11,52 +11,54 @@
     <h1>rawnii's weird web october 2025!!</h1>
 
     <div class="container">
-    <div class="box">
-        <ol>
-            <li>Transparency</li> <!--1-->
-            <li>Maps</li> <!--2-->
-            <li>Scramble</li> <!--3-->
-            <li>Filters</li> <!--4-->
-            <li>Remix</li> <!--5-->
-            <li>Solids</li> <!--6-->
-            <li>Sub-optimal</li> <!--7-->
-            <li>Containers</li> <!--8-->
-            <li>Blink</li> <!--9-->
-            <li>Warning</li> <!--10-->
-            <br>
-        </ol>
+        <div class="box">
+            <ol>
+                <li>Transparency</li> <!--1-->
+                <li>Maps</li> <!--2-->
+                <li>Scramble</li> <!--3-->
+                <li>Filters</li> <!--4-->
+                <li>Remix</li> <!--5-->
+                <li>Solids</li> <!--6-->
+                <li>Sub-optimal</li> <!--7-->
+                <li>Containers</li> <!--8-->
+                <li>Blink</li> <!--9-->
+                <li>Warning</li> <!--10-->
+                <br>
+            </ol>
+        </div>
+        <div class="box">
+            <ol start="11">
+                <li>Camera</li> <!--11-->
+                <li>Battle</li> <!--12-->
+                <li>Upside-down</li> <!--13-->
+                <li>Doubles</li> <!--14-->
+                <li>Unicode</li> <!--15-->
+                <li>Transition</li> <!--16-->
+                <li>Illumination</li> <!--17-->
+                <li>Trading</li> <!--18-->
+                <li>Bounce</li> <!--19-->
+                <li>Hidden</li> <!--20-->
+                <br>
+            </ol>
+        </div>
+        <div class="box">
+            <ol start="21">
+                <li>Language</li> <!--21-->
+                <li>Memory</li> <!--22-->
+                <li>Style</li> <!--23-->
+                <li>Counter</li> <!--24-->
+                <li>Empty</li> <!--25-->
+                <li>Texture</li> <!--26-->
+                <li>Spell</li> <!--27-->
+                <li>Tables</li> <!--28-->
+                <li>Surprise</li> <!--29-->
+                <li>Deprecated</li> <!--30-->
+                <li>Spooky</li> <!--31-->
+            </ol>
+        </div>
     </div>
-    <div class="box">
-        <ol start="11">
-            <li>Camera</li> <!--11-->
-            <li>Battle</li> <!--12-->
-            <li>Upside-down</li> <!--13-->
-            <li>Doubles</li> <!--14-->
-            <li>Unicode</li> <!--15-->
-            <li>Transition</li> <!--16-->
-            <li>Illumination</li> <!--17-->
-            <li>Trading</li> <!--18-->
-            <li>Bounce</li> <!--19-->
-            <li>Hidden</li> <!--20-->
-            <br>
-        </ol>
-    </div>
-    <div class="box">
-        <ol start="21">
-            <li>Language</li> <!--21-->
-            <li>Memory</li> <!--22-->
-            <li>Style</li> <!--23-->
-            <li>Counter</li> <!--24-->
-            <li>Empty</li> <!--25-->
-            <li>Texture</li> <!--26-->
-            <li>Spell</li> <!--27-->
-            <li>Tables</li> <!--28-->
-            <li>Surprise</li> <!--29-->
-            <li>Deprecated</li> <!--30-->
-            <li>Spooky</li> <!--31-->
-        </ol>
-    </div>
-    </div>
+        <img src="/images/blinking-rawnii.gif" class="rawnii">
+        <img src="/images/blinking-rawnii-arm.png" class="arm">
 </body>
 
 </html>
