Finished my homepage!

--- a/rawniis-weird-webs-2025.html
+++ b/rawniis-weird-webs-2025.html
@@ -8,7 +8,9 @@
 
 <body>
     <br>
-    <h1>rawnii's weird web october 2025!!</h1>
+    <div>
+        <h1>rawnii's weird web october 2025!!</h1>
+    </div>
 
     <div class="container">
         <div class="box">
@@ -57,8 +59,16 @@
             </ol>
         </div>
     </div>
-        <img src="/images/blinking-rawnii.gif" class="rawnii">
-        <img src="/images/blinking-rawnii-arm.png" class="arm">
+    <div class="container-2">
+        <div class="box-2">
+            <img src="/images/blinking-rawnii.gif" class="rawnii">
+            <img src="/images/blinking-rawnii-arm.png" class="arm">
+        </div>
+        <div class="box-3">
+            <p>* hey, hey, hey!<br>* why not check out these cool webpages i made? :3<br></p>
+            <p>* maybe you'll find something you like here?<br>* or... well, maybe not. but that's okay! ;P</p>
+        </div>
+    </div>
 </body>
 
 </html>
