--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>rawnii's weird web october 2025!!</title>
-    <link rel="stylesheet" href="rawniis-weird-webs-2025.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tiny5">
 </head>
 
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="box">
             <ol>
-                <li>Transparency</li> <!--1-->
+                <li><a href="/transparency/click-on-yu.html">Transparency</a></li> <!--1-->
                 <li>Maps</li> <!--2-->
                 <li>Scramble</li> <!--3-->
                 <li>Filters</li> <!--4-->
