--- a/transparency/click-on-yu.html
+++ b/transparency/click-on-yu.html
@@ -18,7 +18,7 @@
         <a href="../index.html"><p><< homepage</p></a>
     </div>
     <div class="button-2">
-        <p>ants-on-a-map >></p>
+        <a href="../maps/ant-on-a-map.html"><p>ant-on-a-map >></p></a>
     </div>
 </body>
 </html>
