--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="box">
             <ol>
                 <li><a href="/transparency/click-on-yu.html">Transparency</a></li> <!--1-->
-                <li>Maps</li> <!--2-->
+                <li><a href="/maps/ant-on-a-map.html">Maps</a></li> <!--2-->
                 <li>Scramble</li> <!--3-->
                 <li>Filters</li> <!--4-->
                 <li>Remix</li> <!--5-->
