--- a/maps/ant-on-a-map.html
+++ b/maps/ant-on-a-map.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <img src="/maps/images/map.png">
-    <img src="/maps/images/ant.png" class="ant" id="ant">
+    <a href="https://en.wikipedia.org/wiki/Ant"><img src="/maps/images/ant.png" class="ant" id="ant"></a>
     <div class="button-1">
         <a href="../transparency/click-on-yu.html"><p><< click-on-yu</p></a>
     </div>
     <div class="button-2">
-        <p>scrambled-eggs >></p>
+        <a href="../scramble/scramble.html"><p>scramble >></p></a>
     </div>
     
     <script>
