--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ol>
                 <li><a href="/transparency/click-on-yu.html">Transparency</a></li> <!--1-->
                 <li><a href="/maps/ant-on-a-map.html">Maps</a></li> <!--2-->
-                <li>Scramble</li> <!--3-->
+                <li><a href="/scramble/scramble.html">Scramble</a></li> <!--3-->
                 <li>Filters</li> <!--4-->
                 <li>Remix</li> <!--5-->
                 <li>Solids</li> <!--6-->
