Completed Day #4 and Day #5!

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <li><a href="/transparency/click-on-yu.html">Transparency</a></li> <!--1-->
                 <li><a href="/maps/ant-on-a-map.html">Maps</a></li> <!--2-->
                 <li><a href="/scramble/scramble.html">Scramble</a></li> <!--3-->
-                <li>Filters</li> <!--4-->
-                <li>Remix</li> <!--5-->
+                <li><a href="/filters/the-prince.html">Filters</a></li> <!--4-->
+                <li><a href="/remix/dawgs-barkin.html">Remix</a></li> <!--5-->
                 <li>Solids</li> <!--6-->
                 <li>Sub-optimal</li> <!--7-->
                 <li>Containers</li> <!--8-->
