--- a/scramble/scramble.html
+++ b/scramble/scramble.html
@@ -18,7 +18,7 @@
         <a href="../maps/ant-on-a-map.html"><p><< ant-on-a-map</p></a>
     </div>
     <div class="button-2">
-        <p>the-prince >></p>
+        <a href="../filters/the-prince.html"><p>the-prince >></p></a>
     </div>
     
     <script>
