--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="/scramble/scramble.html">Scramble</a></li> <!--3-->
                 <li><a href="/filters/the-prince.html">Filters</a></li> <!--4-->
                 <li><a href="/remix/dawgs-barkin.html">Remix</a></li> <!--5-->
-                <li>Solids</li> <!--6-->
+                <li><a href="/solids/a-suspicious-box-of-oranges.html">Solids</a></li> <!--6-->
                 <li>Sub-optimal</li> <!--7-->
                 <li>Containers</li> <!--8-->
                 <li>Blink</li> <!--9-->
