--- a/remix/dawgs-barkin.html
+++ b/remix/dawgs-barkin.html
@@ -31,7 +31,7 @@
         <a href="../filters/the-prince.html"><p><< the-prince</p></a>
     </div>
     <div class="button-2">
-        <p>??? >></p>
+        <a href="../solids/a-suspicious-box-of-oranges.html"><p>a-suspicious-box-of-oranges >></p></a>
     </div>
     
     <script>
