--- a/solids/a-suspicious-box-of-oranges.html
+++ b/solids/a-suspicious-box-of-oranges.html
@@ -15,7 +15,7 @@
         <a href="../remix/dawgs-barkin.html"><p><< dawgs-barkin</p></a>
     </div>
     <div class="button-2">
-        <p>??? >></p>
+        <a href="../suboptimal/a-very-safe-ocean-adventure.html"><p>a-very-safe-ocean-adventure >></p></a>
     </div>
 </body>
 </html>
