--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="/filters/the-prince.html">Filters</a></li> <!--4-->
                 <li><a href="/remix/dawgs-barkin.html">Remix</a></li> <!--5-->
                 <li><a href="/solids/a-suspicious-box-of-oranges.html">Solids</a></li> <!--6-->
-                <li>Sub-optimal</li> <!--7-->
+                <li><a href="/suboptimal/a-very-safe-ocean-adventure.html">Sub-optimal</a></li> <!--7-->
                 <li>Containers</li> <!--8-->
                 <li>Blink</li> <!--9-->
                 <li>Warning</li> <!--10-->
