--- a/suboptimal/a-very-safe-ocean-adventure.html
+++ b/suboptimal/a-very-safe-ocean-adventure.html
@@ -3,7 +3,6 @@
 <head>
     <title>a very safe ocean adventure</title>
     <link rel="stylesheet" href="a-very-safe-ocean-adventure.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tiny5">
     <link rel="icon" type="image/x-icon" href="/suboptimal/images/submarine.png">
     <link href="https://fonts.cdnfonts.com/css/berlin-sans-fb-demi" rel="stylesheet">
 </head>
@@ -20,7 +19,7 @@
         <a href="../solids/a-suspicious-box-of-oranges.html"><p><< a-suspicious-box-of-oranges</p></a>
     </div>
     <div class="button-2">
-        <p>??? >></p>
+         <a href="../containers/a-merman-in-an-aquarium.html"><p>a-merman-in-an-aquarium >></p></a>
     </div>
     </div>
 </body>
