Completed Day #9! ...and improved the past days' buttons.

--- a/containers/a-merman-in-an-aquarium.html
+++ b/containers/a-merman-in-an-aquarium.html
@@ -15,7 +15,7 @@
         <a href="../suboptimal/a-very-safe-ocean-adventure.html"><p><< a-very-safe-ocean-adventure</p></a>
     </div>
     <div class="button-2">
-        <p>??? >></p>
+        <a href="../blink/cute-paranoia.html"><p>cute-paranoia >></p></a>
     </div>
 </body>
 </html>
