--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="/solids/a-suspicious-box-of-oranges.html">Solids</a></li> <!--6-->
                 <li><a href="/suboptimal/a-very-safe-ocean-adventure.html">Sub-optimal</a></li> <!--7-->
                 <li><a href="/containers/a-merman-in-an-aquarium.html">Containers</a></li> <!--8-->
-                <li>Blink</li> <!--9-->
+                <li><a href="/blink/cute-paranoia.html">Blink</a></li> <!--9-->
                 <li>Warning</li> <!--10-->
                 <br>
             </ol>
