--- a/blink/paranoia.html
+++ b/blink/paranoia.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>cute paranoia</title>
-    <link rel="stylesheet" href="cute-paranoia.css">
+    <title>paranoia</title>
+    <link rel="stylesheet" href="paranoia.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tiny5">
 </head>
 <body>
@@ -14,7 +14,7 @@
         <a href="../containers/a-merman-in-an-aquarium.html"><p><< a-merman-in-an-aquarium</p></a>
     </div>
     <div class="button-2">
-        <a href="../maps/ant-on-a-map.html"><p>??? >></p></a>
+        <a href="../warning/abort.html"><p>abort >></p></a>
     </div>
 </body>
 <script>
