--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="box">
             <ol start="11">
-                <li>Camera</li> <!--11-->
+                <li><a href="/camera/happic.html">Camera</a></li> <!--11-->
                 <li>Battle</li> <!--12-->
                 <li>Upside-down</li> <!--13-->
                 <li>Doubles</li> <!--14-->
