--- a/warning/abort.html
+++ b/warning/abort.html
@@ -16,7 +16,7 @@
         <a href="../blink/paranoia.html"><p><< paranoia</p></a>
     </div>
     <div class="button-2">
-        <p>??? >></p>
+        <a href="../camera/happic.html"><p>happic >></p></a>
     </div>
 </body>
 </html>
